check at most 2 specializations for generate contract